Fix overflow issue

--- a/css/katejs.css
+++ b/css/katejs.css
@@ -35,6 +35,7 @@
         width: 100%;
         height: 50%;
         background-color: #FFEFD5;
+        overflow: auto;
     }
 
     #controls {
